--- a/front-end/public/index.html
+++ b/front-end/public/index.html
@@ -39,5 +39,9 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script type="text/javascript">
+      var apiHost = "http://localhost:3030";
+      // var apiHost = "https://smileupapi.eddiebatkinson.com";
+    </script>
   </body>
 </html>
